--- a/fullvideobg.html
+++ b/fullvideobg.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Video in Header Background</title>
-    <link rel="stylesheet" href="/src/css/videobg.css"/>
+    <link rel="stylesheet" href="/my-simples-html-templates/src/css/videobg.css"/>
 </head>
 <body>
     <header class="v-header container">
         <div class="fullscreen-video-bg">
-            <video src="/src/media/bg.mp4" loop="true" autoplay="true" muted="true"></video>
+            <video src="/my-simples-html-templates/src/media/bg.mp4" loop="true" autoplay="true" muted="true"></video>
         </div>
         <div class="header-overlay"></div>
         <div class="header-content">
