--- a/index.html
+++ b/index.html
@@ -63,6 +63,41 @@
         header:hover .tooltip{
             visibility: visible;
         }
+        .boder section{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            padding:1rem;
+            flex-flow: column;
+        }
+        ul{
+            display: flex;
+            width:75%;
+            list-style: none;
+            flex-flow: row wrap;
+        }
+        ul li{
+            margin:1.5rem 1rem;
+        }
+        ul li a{
+            color:#fff;
+            text-decoration:none;
+            text-transform: uppercase;
+            padding: 1rem;
+            background:coral;
+            border-radius: 10px;
+
+        }
+
+        ul li a:hover{
+            background:#e26d42;
+        }
+
+        ul li a:active{
+            background:#f77c4f;
+        }
+    
     </style>
 </head>
 <body>
@@ -75,7 +110,9 @@
         </header>
         <div class="boder">
             <section>
+                <h1>Pages</h1>
                 <br/>
+
                 <ul>
                 </ul>
             </section>
@@ -94,7 +131,7 @@
                 if(i.indexOf('.') > -1){
                     i = i.slice(0, i.indexOf('.'))
                 }
-                ul.innerHTML += `<li><a href="/my-simples-html-templates/${url}">${i}<a/></li>`
+                ul.innerHTML += `<li><a href="/my-simples-html-templates/${url}">${i}</a></li>`
             })
          }
      </script>
