--- a/ajax.html
+++ b/ajax.html
@@ -18,7 +18,7 @@
             // XHR Object
             var xhr = new XMLHttpRequest()
             //Open - type, url/file, async
-            xhr.open('GET', '/my-simples-html-templates/src/text/likeServerText.txt', true)
+            xhr.open('GET', './src/text/likeServerText.txt', true)
             /*
             xhr.onload = function(){
                 if(this.status == 200){
