--- a/imgslider.html
+++ b/imgslider.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Image Slider Fullscreen</title>
-    <link rel="stylesheet" href="/my-simples-html-templates/src/css/slider.css"/>
+    <link rel="stylesheet" href="./src/css/slider.css"/>
 </head>
 <body>
     <div class="wrap">
