--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 if(i.indexOf('.') > -1){
                     i = i.slice(0, i.indexOf('.'))
                 }
-                ul.innerHTML += `<li><a href="/my-simples-html-templates/${url}">${i}</a></li>`
+                ul.innerHTML += `<li><a href="./${url}">${i}</a></li>`
             })
          }
      </script>
