--- a/parallax.html
+++ b/parallax.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Parallax Page</title>
-    <link rel="stylesheet" href="/my-simples-html-templates/src/css/para.css">
+    <link rel="stylesheet" href="./src/css/para.css">
 </head>
 <body>
     <div class="parallax-img img-1">
