--- a/responsive/mobile-first/index.html
+++ b/responsive/mobile-first/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Mobile - First</title>
-    <link rel="stylesheet" href="/my-simples-html-templates/responsive/mobile-first/src/css/main.css">
+    <link rel="stylesheet" href="./src/css/main.css">
 </head>
 <body>
     <main>
@@ -59,6 +59,6 @@
         <p>Phone: <strong>(16)98988-1234</strong></p>
     </footer>
     <!--script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script-->
-    <script src="/my-simples-html-templates/responsive/mobile-first/src/js/main.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 </html>
