add grid template

--- a/responsive/mobF_grid/index.html
+++ b/responsive/mobF_grid/index.html
@@ -92,7 +92,7 @@
     <!-- Footer -->
     <footer id="main-footer" class="grid">
         <div>Grid Web Solutions</div>
-        <div>Project By <a href="http://tecladistaprod.github.io" target="_blank">TecladistaProd (Vitor)</a></div>
+        <div>Projected By <a href="http://tecladistaprod.github.io" target="_blank">TecladistaProd (Vitor)</a></div>
     </footer>
 </body>
 </html>
